Fix app not working on firefox 2

--- a/assets/ie_css/table.css
+++ b/assets/ie_css/table.css
@@ -4,6 +4,7 @@
 	margin-bottom: 1%;
 	background: #fafafa;
 	color: black;
+	clear: both;
 }
 
 .maintable td, .maintable th {
